# hft-sim

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/error/: mod.rs
server/src/logger/: mod.rs
server/src/server_client_com/: mod.rs
server/src/trade_notification/: mod.rs
server/src/trading_server/: mod.rs
simple-client/: Cargo.toml
simple-client/src/: main.rs
simple-orderbook/: Cargo.toml
simple-orderbook/src/: lib.rs  main.rs
simple-orderbook/src/order/: mod.rs  order_creator.rs
simple-orderbook/src/orderbook/: match_orders.rs  misc.rs  mod.rs
simple-orderbook/src/trades/: mod.rs
