[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
orderbook = { path = "../simple-orderbook/"}
tokio = { version = "1", features = ["full", "tracing", "rt", "macros"] }
console-subscriber = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.8"
dashmap = "5"
